# HotShard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: benchmark_a100_qwen3b.json
examples/: ollama_proxy.md  openai_passthrough.py  quickstart.py  vllm_proxy.md
src/guarded_hotshard/: __init__.py  async_dispatcher.py  cli.py  demo.py  layers.py  metrics.py  modes.py  prometheus_export.py  proxy.py  scheduler.py  workload.py  wrap.py
tests/: test_demo_with_mock_backend.py  test_layers.py  test_metrics.py  test_modes.py  test_priority_formula.py  test_scheduler.py  test_wrap_async.py
